Small styling hotfix

--- a/views/add-review.pug
+++ b/views/add-review.pug
@@ -4,6 +4,7 @@ append head
     link(rel='stylesheet' type='text/css' href='/public/css/footer.css')
     link(rel='stylesheet' type='text/css' href='/public/css/review.css')
     link(rel='stylesheet' type='text/css' href='/public/css/header.css')
+    title readWell | Add a Review
     script(src='/public/js/add-review.js' type='module' defer)
 
 block content
