--- a/views/book-page.pug
+++ b/views/book-page.pug
@@ -4,6 +4,7 @@ append head
 	link(rel='stylesheet' href='/public/css/book-page.css')
 	link(rel="stylesheet" href="/public/css/header.css")
 	link(rel='stylesheet' href='/public/css/footer.css')
+	title readWell | Meet your next favorite book
 	script(src='/public/js/book.js' type='module' defer)
 block content
 	.page-container
