--- a/views/book-title-search.pug
+++ b/views/book-title-search.pug
@@ -5,6 +5,7 @@ append head
     link(rel='stylesheet' type='text/css' href='/public/css/books-browse.css')
     link(rel='stylesheet' type='text/css' href='/public/css/header.css')
     link(rel='stylesheet' type='text/css' href='/public/css/footer.css')
+    title readWell | Search by Title
 
 block content
     div.content-container
