--- a/views/edit-review.pug
+++ b/views/edit-review.pug
@@ -5,6 +5,7 @@ append head
     link(rel='stylesheet' type='text/css' href='/public/css/review.css')
     link(rel='stylesheet' type='text/css' href='/public/css/header.css')
     script(src='/public/js/edit-review.js' type='module' defer)
+    title readWell | Edit your Review
 
 block content
     .body-content-container
