--- a/views/error-page.pug
+++ b/views/error-page.pug
@@ -3,8 +3,8 @@ extends layout.pug
 append head
   link(rel="stylesheet", href="/public/css/header.css")
   link(rel='stylesheet' href='/public/css/footer.css')
-  link(rel='stylesheet' href='/public/css/my-books.css')
+  link(rel='stylesheet' href='/public/css/page-not-found.css')
 
 block content
   .page-not-found
-  h1 Page Not Found
+    h1.page-not-found-header Page Not Found
