--- a/views/include/header.pug
+++ b/views/include/header.pug
@@ -1,8 +1,8 @@
 header.header
     .header-container
         .header__left
-            h1.header__left--good.goodreads-header good
-                span.header__left--reads reads
+            h1.header__left--good.goodreads-header read
+                span.header__left--reads Well
         nav.header__right
             form.search-form
                 input(id="myInput" placeholder="Search by Title" name="title")
