--- a/views/splash.pug
+++ b/views/splash.pug
@@ -5,14 +5,14 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel='stylesheet' type='text/css' href='/public/css/splash.css')
         link(rel='stylesheet' type='text/css' href='/public/css/footer.css')
-        title Site-name | Meet your next favorite book
+        title readWell | Meet your next favorite book
         script(src="/public/js/login.js" type='module' defer)
         script(src="/public/js/signup.js" type='module' defer)
     body
         header.header
             div(class='header__item header__item--title')
-                h1.title__text--good good
-                    span.title__text--reads reads
+                h1.title__text--good read
+                    span.title__text--reads Well
             div(class='header__item header__item--log-in')
                 form#login
                     .login__content-container
