--- a/views/my-books.pug
+++ b/views/my-books.pug
@@ -5,6 +5,7 @@ append head
     link(rel='stylesheet' type='text/css' href='/public/css/my-books.css')
     link(rel='stylesheet' type='text/css' href='/public/css/header.css')
     script(src='/public/js/my-books.js')
+    title readWell | My Books
 
 block content
     .content-container
