--- a/public/css/header.css
+++ b/public/css/header.css
@@ -165,6 +165,6 @@ header {
 
 @media screen and (max-width: 1440px) {
   .header-container {
-    padding-left: 4%;
+    padding: 0 2% 0 4%;
   }
 }
